# rsv_trans_model

./: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  README.txt  cmake_install.cmake  sub
inputs/: ReadMe  gen_seeds.R  seed_samples.csv
inputs/cnt_mat/: cntCnwn.txt  cntCnwp.txt  cntCpwn.txt  cntCpwp.txt  cntMinCA.txt  cntMinCnwn.txt  cntMinCnwp.txt  cntMinCpwn.txt  cntMinCpwp.txt  cntMinPA.txt  cntMinPnwn.txt  cntMinPnwp.txt  cntMinPpwn.txt  cntMinPpwp.txt  cntPnwn.txt  cntPnwp.txt  cntPpwn.txt  cntPpwp.txt
inputs/demo/: HRpro.txt  ZCHDga.txt  ZCLDga.txt  age_rate.txt  bd_rate.txt  birth_rate_daily.numbers  palpro_age.txt  pop_age_17_conv.txt  prop_mat.txt  prop_par.txt  proprisk.txt
inputs/prior/: all_prior.xls
inputs/rdms/: RSV_RSDM_neg_trim.txt  RSV_RSDM_pos_trim.txt  scalar.txt
outputs/: ReadMe
outputs/cal/m1d2cnt/: DIC.txt
outputs/cal/m1d3cnt/: DIC.txt
outputs/cal/m1d4cnt/: DIC.txt
outputs/cal/m1d5cnt/: DIC.txt
outputs/cal/m2d1cnt/: DIC.txt
outputs/cal/m2d3cnt/: DIC.txt
outputs/cal/m2d4cnt/: DIC.txt
outputs/cal/m2d5cnt/: DIC.txt  MC_acceptance_A.txt  MC_acceptance_B.txt  MC_acceptance_C.txt  MC_acceptance_D.txt  MC_acceptance_post_A.txt  MC_acceptance_post_B.txt  MC_acceptance_post_C.txt  MC_acceptance_post_D.txt  MC_chain_A_full_A.txt  MC_chain_M_full_A.txt  MC_chain_S_full_A.txt  MC_chain_T_full_A.txt  (+17 more)
outputs/soln/: R0_sample.csv  annual_sample_Z.txt  find_optimal.csv  foi_All.csv  inci_sample_Z.csv  pR.csv  pos_sample_Z.csv  risks
src/: cea.h  epmgp.h  interventions.h  main.cpp  mcmc.h  model.h  outcomes.h  pre.h  writing.h
(+1165 files in other folders)
